src/test/ui/unsized-locals/unsized-exprs.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-exprs.rs:22:26
   |
LL |     udrop::<(i32, [u8])>((42, *foo()));
   |                          ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `(i32, [u8])`, the trait `Sized` is not implemented for `[u8]`
   = note: required because it appears within the type `(i32, [u8])`
   = note: tuples must have a statically known size to be initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
